Updated website content

--- a/research/index.html
+++ b/research/index.html
@@ -205,7 +205,7 @@
               <img src="../img/project1.png" alt="Project 5" width=120px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
-
+              <a href="https://github.com/charlesrocabert/Tribolium-castaneum-transcriptomics-pipeline" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> Pipeline repository</a>
               </div>
               <br/><br/>
               <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
@@ -244,7 +244,7 @@
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Modeling the principles behind metabolome conservation in mammals</h5>
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">T</span>raditionally, metabolic evolution has been primarily studied by comparing enzyme content and pathway structure across species. Recent progress in metabolomics technology allows the systematic quantification of metabolite concentrations, the metabolome, offering a new perspective to interrogate the evolution of metabolic systems.</p>
-                <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a simulation framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. MetEvolSim takes as an input any SBML metabolic network model, as soon as the kinetic model is fully specified, and a stable steady-state exists. Steady-state concentrations are computed thanks to Copasi software. Using this model, I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution <strong>(<a href="https://doi.org/10.1073/pnas.2302147120" target="_blank">published in PNAS</a>)</strong>.</p>
+                <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I have explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I have developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a simulation framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. MetEvolSim takes as an input any SBML metabolic network model, as soon as the kinetic model is fully specified, and a stable steady-state exists. Steady-state concentrations are computed thanks to Copasi software. Using this model, I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution <strong>(<a href="https://doi.org/10.1073/pnas.2302147120" target="_blank">published in PNAS</a>)</strong>.</p>
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Gábor Boross, Orsolya Liska, Balázs Papp.</p>
               </div>
             </div>
