--- a/software/index.html
+++ b/software/index.html
@@ -178,6 +178,9 @@
         <a class="nav-link" href="#moris"><i class="fas fa-caret-down"></i> MoRIS</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#multiomics_pipeline"><i class="fas fa-caret-down"></i> Multi-omics pipeline</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#sigmafgm"><i class="fas fa-caret-down"></i> &sigma;FGM</a>
       </li>
       <li class="nav-item">
@@ -262,6 +265,40 @@
                 • <strong>Aug. 2016:</strong> <em>Proceedings of IENE 2016 conference. 5th International Conference on Ecology and Transportation: Integrating Transport Infrastructures with Living Landscapes</em> (Lyon, France). <a href="http://hal.cirad.fr/LJK_MAD_STEEP/hal-01412280v1" target="_blank">(link)</a>
                 <br/>
                 • <strong>Jul. 2015:</strong> <em>Proceedings of World Conference on Natural Resource Modeling</em> (Bordeaux, France). <a href="https://hal.archives-ouvertes.fr/hal-01242828/" target="_blank">(link)</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Multi-omics pipeline -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card border-muted">
+          <div class="row no-gutters">
+            <div class="col-md-4 p-4 text-center">
+              <a name="multiomics_pipeline"></a>
+              <img src="../img/Tcastaneum_logo.png" alt="Tcastaneum logo" width=200px class="img-fluid">
+              <br/><br />
+              <span class="text-muted">Multi-omics pipeline to detect signals of selection during stressful environmental change.</span>
+              <br /><br />
+              <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+                <a href="https://github.com/charlesrocabert/Tribolium-castaneum-transcriptomics-pipeline" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> Pipeline repository</a>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fas fa-caret-down"></i> <em>Tribolium castaneum</em> multi-omics pipeline</h5>
+                <p align="center">
+                  <a href="https://github.com/charlesrocabert/Tribolium-castaneum-transcriptomics-pipeline/LICENSE.html" target="_blank"><img src="https://img.shields.io/badge/License-GPLv3-blue.svg" /></a>
+                </p>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">T</span>he objective of this pipeline is to associate signals of selection at the genomic and gene expression levels. The originality of this approach is to both detect allele frequency changes (AFCs) and gene expression changes through generations, using the same individual-level RNA-seq dataset. Recent studies have demonstrated the possibility to detect SNPs from RNA-seq data, assuming that only expressed regions of the genome are available. The approach covers a vast amount of methodologies, including variants call, the calculation of AFCs and the genetic map, read counts or the detection of gene expression modules..</p>
+                <h5>Publications and communications</h5>
+                <p class="card-text text-justify font-weight-light">
+                • One manuscript in preparation.
+                <br/>
                 </p>
               </div>
             </div>
