--- a/cv/index.html
+++ b/cv/index.html
@@ -314,7 +314,7 @@
             <div class="col-md-11 p-4">
               <strong>Lecturer, undergraduate department</strong>, Heinrich Heine Düsseldorf Universität (Düsseldorf, Germany)
               <br/>
-              <span class="text-muted"><font style="font-variant: small-caps">2023-2024</font></span>
+              <span class="text-muted"><font style="font-variant: small-caps">2023-Now</font></span>
               <br/><br/>
               • In charge of the unit "Introduction to Metabolic Networks Modeling" (Linear algebra, linear/quadratic/logical programming, constraint-based modeling, ODEs, Python).
             </div>
@@ -378,6 +378,22 @@
 
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Supervision of students</font></h5>
+
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card">
+          <div class="row no-gutters">
+            <div class="col-md-11 p-4">
+              <strong>Supervisor of Furkan Mert</strong>, Bachelor thesis, Henrich-Hein Universität Düsseldorf (Germany)
+              <br/>
+              <span class="text-muted"><font style="font-variant: small-caps">2024</font></span>
+              <br/><br/>
+              • Evolutionary algorithms for growth balance analysis.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="row justify-content-center mt-4">
       <div class="col-lg-11">
