--- a/cv/index.html
+++ b/cv/index.html
@@ -384,7 +384,7 @@
         <div class="shadow-sm card">
           <div class="row no-gutters">
             <div class="col-md-11 p-4">
-              <strong>Supervisor of Furkan Mert</strong>, Bachelor thesis, Henrich-Hein Universität Düsseldorf (Germany)
+              <strong>Supervisor of Furkan Mert</strong>, Bachelor thesis, Henrich-Heine Universität Düsseldorf (Germany)
               <br/>
               <span class="text-muted"><font style="font-variant: small-caps">2024</font></span>
               <br/><br/>
