Updated publications list

--- a/publications/index.html
+++ b/publications/index.html
@@ -177,7 +177,7 @@
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-info">submitted</span> <u>Eva. L Koch, Charles Rocabert</u>, Champak Beeravolu Reddy, Frédéric Guillaume.
-      <strong>Gene expression evolution is predicted by stronger indirect selection on pleiotropic genes</strong>. <em>BioRxiv</em> (2024).
+      <strong>Gene expression evolution is predicted by stronger indirect selection at more pleiotropic genes</strong>. <em>BioRxiv</em> (2024).
       <br/>
       <a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank">(DOI:10.1101/2024.07.22.604294)</a>
       <br/>
