--- a/index.html
+++ b/index.html
@@ -168,14 +168,6 @@
 
   <div class="col-md-4 text-center d-none d-lg-block">
     <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
-      <img src="./img/project1.png" alt="Multi omics" height=120px>
-      <br /><br />
-      <h3>Integrative<br />Omics</h3>
-    </button>
-  </div>
-
-  <div class="col-md-4 text-center d-none d-lg-block">
-    <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
       <img src="./img/hexagons.png" alt="Numerical simulations" height=120px>
       <br /><br />
       <h3>Complex Systems<br />Modeling</h3>
@@ -190,10 +182,18 @@
     </button>
   </div>
 
+  <div class="col-md-4 text-center d-none d-lg-block">
+    <button class="text-center btn btn-block btn-outline-secondary shadow-sm p-2" disabled>
+      <img src="./img/project1.png" alt="Multi omics" height=120px>
+      <br /><br />
+      <h3>Integrative<br />Omics</h3>
+    </button>
+  </div>
+
 </div>
 
 <div class="row m-3 mb-5">
-
+  
   <div class="col-md-4 text-center">
     <br/>
     <img class="rounded img-fluid" src="./img/portrait.jpg" alt="Portrait" width=250px>
@@ -217,7 +217,7 @@
       Before that, I have been a research associate at the <a href="https://www2.helsinki.fi/en/faculty-of-biological-and-environmental-sciences/research/organismal-and-evolutionary-biology" target="_blank">University of Helsinki</a>, the <a href="http://group.szbk.u-szeged.hu/sysbiol/papp-balazs-lab-index.html" target="_blank">Hungarian Academy of Sciences</a>, and at <a href="https://team.inria.fr/beagle/" target="_blank">INRIA</a>. I defended my PhD in November, 2017 at <a href="https://www.insa-lyon.fr/en/" target="_blank">INSA de Lyon</a>, within the project-team <a href="https://team.inria.fr/beagle/" target="_blank">INRIA-Beagle</a>.
     </p>
     <p class="font-weight-light">
-      Check out the menu to learn more about my <a href="/research/" target="_blank">research activity</a> and my last posts. Discover my publicly available software <a href="/software" target="_blank">here</a> and on <a href="https://github.com/charlesrocabert" target="_blank">GitHub</a>.
+      Check out the menu to learn more about my <a href="/research/" target="_blank">research activity</a>. Discover my publicly available software <a href="/software" target="_blank">here</a> and on <a href="https://github.com/charlesrocabert" target="_blank">GitHub</a>.
     </p>
   </div>
 </div>
