--- a/research/index.html
+++ b/research/index.html
@@ -177,10 +177,9 @@
               <img src="../img/project6.png" alt="Project 6" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
-
+              <a href="https://github.com/charlesrocabert/gbapy" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> GBA for Python</a>
+              <a href="https://github.com/charlesrocabert/gbapy" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> GBA for C++</a>
               </div>
-              <br/><br/>
-              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -205,18 +204,45 @@
               <img src="../img/project1.png" alt="Project 5" width=120px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
-              <a href="https://github.com/charlesrocabert/Tribolium-castaneum-transcriptomics-pipeline" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> Pipeline repository</a>
+              <a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Evolution Letters, 2025)</a>
+              <a href="https://github.com/charlesrocabert/Koch-et-al-Predictability-of-Gene-Expression" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> Pipeline repository</a>
               </div>
-              <br/><br/>
-              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
             </div>
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Deciphering the genetic architecture of polygenic adaptation in <em>Tribolium castaneum</em></h5>
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">M</span>any adaptation processes have a polygenic genetic basis. Characterizing the dynamics of polygenic adaptation in evolving populations and their underlying genetic architecture is difficult, and requires the development of new experimental approaches and statistical methods. In particular, the detection of genetic markers associated to polygenic traits is challenging, as weak but meaningful associations are often under the barrier of statistical detection, in addition to linkage desequilibrium and other known biases (<a href="https://doi.org/10.1146/annurev-genom-083115-022316" target="_blank">Sella & Barton, 2019</a>).</p>
                 <p class="card-text text-justify font-weight-light">In this context, experimental evolution is a promising tool. By creating the conditions of polygenic adaptation in a controlled environment, this approach allows to characterize the adaptive dynamics at all the levels of the genotype-to-phenotype map, at the resolution of individuals.</p>
-                <p class="card-text text-justify font-weight-light">During this project, I used the data collected during an experimental evolution with <em>Tribolium castaneum</em> (the red floor beetle, see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of adaptation. The objective of this project is to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of polygenic adaptation <strong>(1+ manuscripts in preparation)</strong>.</p>
+                <p class="card-text text-justify font-weight-light">During this project, I used the data collected during an experimental evolution with <em>Tribolium castaneum</em> (the red floor beetle, see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of adaptation. The objective of this project is to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of polygenic adaptation <strong>(<a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank">accepted publication</a>)</strong>.</p>
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Frédéric Guillaume, Eva L. Koch.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Research topic 2 -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card border-muted">
+          <div class="row no-gutters">
+            <div class="col-md-4 p-4 text-center">
+              <img src="../img/project4.png" alt="Project 2" width=200px class="img-fluid">
+              <br /><br />
+              <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+              <a href="https://doi.org/10.1111/ecog.07068" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Ecography, 2024)</a>
+              <a href="https://github.com/charlesrocabert/MoRIS" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MoRIS repository</a>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fas fa-caret-down"></i> Integrating road network topology for modeling human-mediated dispersal in terrestrial landscapes</h5>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">B</span>iological invasions are a major threat for biodiversity and human societies. Human-mediated dispersal (HMD) is responsible for transporting invasive species spread through landscapes. Existing models do not account for the topology of the road network, despite its important role in spatially constraining human travels.</p>
+
+                <p class="card-text text-justify font-weight-light">In collaboration with Jérôme M.W. Gippet and Serge Fenet, I developed <a href="https://github.com/charlesrocabert/MoRIS" target="_blank">MoRIS</a> (Model of Routes of Invasive Spread), a spatially explicit and mechanistic stochastic jump model to simulate HMD in terrestrial landscapes. Our modeling approach allows to easily account for the influence of the road network topology on the direction of human travels. By coupling the model to a data-based optimization algorithm (CMA-ES), we have shown that integrating the topology of the road network strongly improve our ability to explain the current distribution of the invasive ant <em>Lasius neglectus</em> in the middle Rhône valley, France <strong>(<a href="https://doi.org/10.1111/ecog.07068" target="_blank">published in Ecography</a>)</strong>.</p>
+
+                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Aymeric Bonnamour, Serge Fenet, Jérôme M.W. Gippet, Bernard Kaufmann.</p>
               </div>
             </div>
           </div>
@@ -237,8 +263,6 @@
               <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MetEvolSim repository</a>
               <a href="https://pypi.org/project/MetEvolSim/" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-python"></i> Pypi package</a>
               </div>
-              <br/><br/>
-              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -268,8 +292,6 @@
               <br />
               <a href="https://github.com/charlesrocabert/SigmaFGM" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> &sigma;FGM repository</a>
               </div>
-              <br/><br/>
-              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -281,36 +303,6 @@
                     <img src="../img/a_long_time_ago.png" alt="A long time ago..." class="img-fluid">
                 </div>
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Samuel Bernard, Guillaume Beslon, Carole Knibbe.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Research topic 2 -->
-    <div class="row justify-content-center mt-4">
-      <div class="col-lg-11">
-        <div class="shadow-sm card border-muted">
-          <div class="row no-gutters">
-            <div class="col-md-4 p-4 text-center">
-              <img src="../img/project4.png" alt="Project 2" width=200px class="img-fluid">
-              <br /><br />
-              <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
-              <a href="https://doi.org/10.1111/ecog.07068" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Ecography, 2023)</a>
-              <a href="https://github.com/charlesrocabert/MoRIS" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MoRIS repository</a>
-              </div>
-              <br/><br/>
-              <h5><span class="badge badge-pill badge-success">ongoing project</span><br/></h5>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title"><i class="fas fa-caret-down"></i> Integrating road network topology for modeling human-mediated dispersal in terrestrial landscapes</h5>
-                <p class="card-text text-justify font-weight-light"><span class="dropcap">B</span>iological invasions are a major threat for biodiversity and human societies. Human-mediated dispersal (HMD) is responsible for transporting invasive species spread through landscapes. Existing models do not account for the topology of the road network, despite its important role in spatially constraining human travels.</p>
-
-                <p class="card-text text-justify font-weight-light">In collaboration with Jérôme M.W. Gippet and Serge Fenet, I developed <a href="https://github.com/charlesrocabert/MoRIS" target="_blank">MoRIS</a> (Model of Routes of Invasive Spread), a spatially explicit and mechanistic stochastic jump model to simulate HMD in terrestrial landscapes. Our modeling approach allows to easily account for the influence of the road network topology on the direction of human travels. By coupling the model to a data-based optimization algorithm (CMA-ES), we have shown that integrating the topology of the road network strongly improve our ability to explain the current distribution of the invasive ant <em>Lasius neglectus</em> in the middle Rhône valley, France <strong>(<a href="https://doi.org/10.1111/ecog.07068" target="_blank">published in Ecography</a>)</strong>.</p>
-
-                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Aymeric Bonnamour, Serge Fenet, Jérôme M.W. Gippet, Bernard Kaufmann.</p>
               </div>
             </div>
           </div>
@@ -337,8 +329,6 @@
               <br/>
               <a href="www.evovo.eu" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-link"></i> EvoEvo project website</a>
               </div>
-              <br/><br/>
-              <h5><span class="badge badge-pill badge-secondary">finished project</span></h5>
             </div>
             <div class="col-md-8">
               <div class="card-body">
