--- a/index.html
+++ b/index.html
@@ -223,8 +223,23 @@
 </div>
 
 <div class="row m-3 mb-5">
-  <div class="col-lg text-center">
-    <img src="./img/achem.png" alt="AChem" height=150px>
+  <div class="offset-md-2 col-md-8">
+    <br/><br/>
+    <figure>
+      <blockquote class="blockquote text-center text-secondary font-weight-light">
+        <span class="dropcap">&laquo;</span> Some rain forests in the Amazon region occur on white-sand soils. In these locations, the physical environment consists of clean white sand, air, falling water, and sunlight. Embedded within this relatively simple physical context, we find one of the most complex ecosystems on earth, containing hundreds of thousands of species. These species do not represent hundreds of thousands of adaptations to the physical environment. Most of adaptations of these species are to the other living organisms. The forest creates its own environment. &raquo;
+      </blockquote>
+      <figcaption class="blockquote-footer text-center">
+        Thomas S. Ray (1993) <cite title="Source Title">An Evolutionary Approach to Synthetic Biology: Zen and the Art of Creating Life.</cite>
+      </figcaption>
+    </figure>
+    <br/>
+    <p class="text-center">
+      <img class="rounded img-fluid" src="./img/surprised.jpg" alt="Portrait" width=400px>
+      <figcaption class="blockquote-footer text-center">
+        Henri Rousseau (1891) <cite title="Source Title">Surprised!</cite>
+      </figcaption>
+    </p>
   </div>
 </div>
 
