--- a/research/index.html
+++ b/research/index.html
@@ -186,8 +186,9 @@
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Metabolic fitness landscapes for evolutionary predictions</h5>
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">I</span>t is currently unclear if the molecular phenotypes observed in evolution experiments indicate <strong>(i)</strong> non-repeatability of evolutionary trajectories, <strong>(ii)</strong> the existence of local fitness optima, or <strong>(iii)</strong> distinct paths toward fitness maximization that are predictable in a probabilistic sense. Moreover, it is unclear why some molecular properties, such as metabolite abundances, or protein expression levels, are more or less conserved through evolution.</p>
                 <p class="card-text text-justify font-weight-light">To predict fitness from cellular resource allocation, I am developing a mathematical and computational evolutionary framework based on the GBA formalism (<a href"">Dourado & Lercher, 2020</a>). This framework will allow to predict evolutionary trajectories and their repeatability, and more generally to better understand the evolution of cellular metabolism, as well as decipher the first principles behind the evolution and the conservation of metabolism properties.</p>
-                <p
+                <!--
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Hugo Dourado, Martin J. Lercher.</p>
+                -->
               </div>
             </div>
           </div>
@@ -204,7 +205,7 @@
               <img src="../img/project1.png" alt="Project 5" width=120px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
-              <a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Evolution Letters, 2025)</a>
+              <a href="https://doi.org/10.1093/evlett/qraf039" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Publication (Evolution Letters, 2025)</a>
               <a href="https://github.com/charlesrocabert/Koch-et-al-Predictability-of-Gene-Expression" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> Pipeline repository</a>
               </div>
             </div>
@@ -213,7 +214,7 @@
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Deciphering the genetic architecture of polygenic adaptation in <em>Tribolium castaneum</em></h5>
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">M</span>any adaptation processes have a polygenic genetic basis. Characterizing the dynamics of polygenic adaptation in evolving populations and their underlying genetic architecture is difficult, and requires the development of new experimental approaches and statistical methods. In particular, the detection of genetic markers associated to polygenic traits is challenging, as weak but meaningful associations are often under the barrier of statistical detection, in addition to linkage desequilibrium and other known biases (<a href="https://doi.org/10.1146/annurev-genom-083115-022316" target="_blank">Sella & Barton, 2019</a>).</p>
                 <p class="card-text text-justify font-weight-light">In this context, experimental evolution is a promising tool. By creating the conditions of polygenic adaptation in a controlled environment, this approach allows to characterize the adaptive dynamics at all the levels of the genotype-to-phenotype map, at the resolution of individuals.</p>
-                <p class="card-text text-justify font-weight-light">During this project, I used the data collected during an experimental evolution with <em>Tribolium castaneum</em> (the red floor beetle, see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of adaptation. The objective of this project is to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of polygenic adaptation <strong>(<a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank">accepted publication</a>)</strong>.</p>
+                <p class="card-text text-justify font-weight-light">During this project, I used the data collected during an experimental evolution with <em>Tribolium castaneum</em> (the red floor beetle, see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of adaptation. The objective of this project was to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of polygenic adaptation <strong>(<a href="https://doi.org/10.1093/evlett/qraf039" target="_blank">published in Evolution Letters</a>)</strong>.</p>
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Frédéric Guillaume, Eva L. Koch.</p>
               </div>
             </div>
