--- a/publications/index.html
+++ b/publications/index.html
@@ -172,19 +172,21 @@
       <u>Underlined names</u> are (co-)first authors.
     </p>
 
+    <!--
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Preprints</font></h5>
-
-    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
-      <span class="badge badge-pill badge-warning">accepted</span> <u>Eva. L Koch, Charles Rocabert</u>, Champak Beeravolu Reddy, Frédéric Guillaume.
-      <strong>Gene expression evolution is predicted by stronger indirect selection at more pleiotropic genes</strong>. <em>BioRxiv</em> (2024).
-      <br/>
-      <a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank">(DOI:10.1101/2024.07.22.604294)</a>
-      <br/>
-    </p>
+    -->
 
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">International peer-reviewed journal articles</font></h5>
+
+    <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
+      <span class="badge badge-pill badge-success">2025</span> <u>Eva. L Koch, Charles Rocabert</u>, Champak Beeravolu Reddy, Frédéric Guillaume.
+      <strong>Gene expression evolution is predicted by stronger indirect selection at more pleiotropic genes</strong>. <em>Evolution Letters, qraf039</em> (2025).
+      <br/>
+      <a href="https://doi.org/10.1093/evlett/qraf039" target="_blank">(DOI:10.1093/evlett/qraf039)</a>
+      <br/>
+    </p>
 
     <p style="margin-top: 20px; margin-bottom: 20px; margin-left: 20px;">
       <span class="badge badge-pill badge-success">2024</span> <u>Charles Rocabert</u>, Serge Fenet, Bernard Kaufmann, Jérôme M.W. Gippet.
