Adjusting bibliographic references

--- a/publications/index.html
+++ b/publications/index.html
@@ -223,7 +223,7 @@
       <span class="badge badge-pill badge-success">2017</span> <u>Charles Rocabert</u>, Carole Knibbe, Jessika Consuegra, Dominique Schneider, Guillaume Beslon.
       <strong>Beware batch culture: Seasonality and niche construction predicted to favor bacterial adaptive diversification</strong>. <em>PLoS computational biology 13 (3), e1005459</em> (2017).
       <br/>
-      <a href="https://doi.org/10.1371/journal.pcbi.1005459.s006" target="_blank">(DOI:10.1371/journal.pcbi.1005459.s006)</a> <a href="https://hal.archives-ouvertes.fr/hal-01508751/bibtex" target="_blank">(bibtex)</a>
+      <a href="https://doi.org/10.1371/journal.pcbi.1005459" target="_blank">(DOI:10.1371/journal.pcbi.1005459)</a> <a href="https://hal.archives-ouvertes.fr/hal-01508751/bibtex" target="_blank">(bibtex)</a>
     </p>
 
     <br/><hr>
