--- a/software/index.html
+++ b/software/index.html
@@ -305,7 +305,7 @@
                 <p class="card-text text-justify font-weight-light"><span class="dropcap">T</span>he objective of this -omics pipeline is to integrate the detection of selection signals at multiple levels of the genotype-to-phenotype map. The originality of the approach relies in both detecting allele frequency changes (AFCs) and gene expression changes through generations, using the same individual-level RNA-seq dataset. Recent studies have demonstrated the possibility to accurately detect SNPs from RNA-seq data, assuming that only expressed regions of the genome are available. This approach covers a vast amount of methodologies, including variants call, the calculation of AFCs, read counts, or the detection of eQTLs and gene expression modules.</p>
                 <h5>Publications and communications</h5>
                 <p class="card-text text-justify font-weight-light">
-                <span class="badge badge-pill badge-info">2025</span> <em>Evolution Letters.</em> in press <a href="https://doi.org/10.1101/2024.07.22.604294" target="_blank">(link)</a>
+                <span class="badge badge-pill badge-info">2025</span> <em>Evolution Letters. qraf039.</em> <a href="https://doi.org/10.1093/evlett/qraf039" target="_blank">(link)</a>
                 <br/>
                 </p>
               </div>
